try to fix phone (make it callable on mobile)

--- a/theme/css/template.less
+++ b/theme/css/template.less
@@ -38,6 +38,11 @@ a.next_step {
 	border-radius: 6px;
 }
 
+a.tel {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
 	height: 100%;
 	width: 100%;
